Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65229

[Android] Text select handle misplaced on fields inside QDialog

XMLWordPrintable

    • Android
    • a5bb7b3ca510c301baf84e1dd46d5aeeb4986eb2 (qt/tqtc-qtbase/dev) 8cb8dab0309f2baf74b351d3a1d26807c3af4483 (qt/qtbase/6.0) fb02d73ecbb57aa7eac37de6072d537bd36774cd (qt/tqtc-qtbase/tqtc/lts-5.15)

      For instance if QLineEdit is placed inside QDialog, the text select handle is misplaced. It doesn't take into account the QDialog location. 

        1. QLineEdit_on_QDialog.png
          125 kB
          Mika Salmela
        2. qtbug65229.zip
          3 kB
          Mika Salmela
        3. Screenshot_20171214-155915.png
          89 kB
          Mika Salmela
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pekkagehor Pekka Gehör
            misalmel Mika Salmela
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes