[Android] Fix Text select handle misplaced on QDialog issues

Get cursorPoint from a mapToGlobal with a cursorRectangle of the selected inputMethod

Fixes: QTBUG-65229
Fixes: QTBUG-58503
Change-Id: I89b056fa91c59d260f02164c9bd6672b5ada64d6
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit a5bb7b3ca510c301baf84e1dd46d5aeeb4986eb2)
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>